deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: registry
    spec:
      containers:
      - image: registry
        name: registry
        resources: {}
        ports:
        - containerPort: 5000      
        volumeMounts:
        - mountPath: "/var/lib/registry"
          name: registry-pvc
      volumes:
        - name: registry-pvc
          persistentVolumeClaim:
            claimName: registry-pvc
status: {}
