service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: registry
  name: registry
spec:
  ports:
  - name: 80-5000
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: registry
  type: ClusterIP
status:
  loadBalancer: {}
