ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
spec:
  rules:
  - host: registry-192.168.1.38.nip.io
  - http:
      paths:
        - backend:
            serviceName: registry
            servicePort: 80
